--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="plusOne">+1</string>
     <string name="counter">Counter</string>
     <string name="minusOne">-1</string>
+    <string name="unset">UNSET</string>
 </resources>
